--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "@emailjs/browser": "^3.11.0",
     "@gsap/react": "^2.1.0",
     "@ramonak/react-progress-bar": "^5.1.1",
-    "@studio-freight/react-lenis": "^0.0.47",
     "@tsparticles/react": "^3.0.0",
     "aos": "^3.0.0-beta.6",
     "emailjs": "^4.0.3",
+    "lenis": "^1.3.4",
     "localforage": "^1.10.0",
     "lottie-react": "^2.4.0",
     "match-sorter": "^6.3.1",
@@ -30,6 +30,7 @@
     "react-type-animation": "^3.2.0",
     "sort-by": "^1.2.0",
     "swiper": "^11.0.5",
+    "tempus": "^1.0.0-dev.11",
     "tsparticles": "^3.5.0"
   },
   "devDependencies": {
